# KnowledgeBase-MCP

./: .dockerignore  .env.dev.example  .env.prod.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.prod.yml  main.py  pyproject.toml
deploy/nginx/: default.conf
docker/: Dockerfile  docker-compose.dev.yml
docker/nginx/: default.conf
docs/: MCP接口设计方案-第一阶段.md  MCP接口设计方案.md  MinIO文件存储设计方案.md  数据库设计方案-第一阶段.md  数据库设计方案.md  日志与报警系统建设方案.md  测试文档-time.md  知识库可视化模块开发计划.md  知识库可视化模块设计说明.md
env/: .env.dev.example  .mcp.json
knowledgebase/: __init__.py
knowledgebase/app/: __init__.py  config.py
knowledgebase/db/: base.py  bootstrap.py  session.py
knowledgebase/domain/: __init__.py  document_types.py  exceptions.py
knowledgebase/http/: staged_file_routes.py
knowledgebase/integrations/: __init__.py
knowledgebase/mcp/: __init__.py  server.py
knowledgebase/models/: __init__.py  category.py  chunk.py  document.py  import_task.py  staged_file.py  storage_gc_task.py
knowledgebase/repositories/: __init__.py  category_repository.py  (+5 more)
sql/: 001_init_schema.sql
test/: base.py  mcp_test_client.py  run_suite.py  test_category_contract.py  test_concurrency_pressure.py  test_document_contract.py  test_document_tool_unit.py  test_embedding_startup_validation.py  test_import_task_consistency.py  test_import_task_contract.py  test_import_task_production_edge_cases.py  test_import_task_service_unit.py  test_non_blocking_io_contract.py  test_search_contract.py  test_staged_file_contract.py  test_web_visualization_contract.py
(+48 files in other folders)
